fix: the blockquote is too dark in dark mode

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -4,6 +4,14 @@
     color: #bbb;
   }
 
+  blockquote.alert {
+    color: #bbb;
+  }
+
+  blockquote {
+    color: #999;
+  }
+
   h1, h2, h3, h4, h5, h6 {
     color: #ddd;
   }
