--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -223,6 +223,9 @@ blockquote {
   color: #7a7a7a;
   border-left: .25rem solid #e5e5e5;
 }
+blockquote.alert {
+  color: #515151;
+}
 blockquote p:last-child {
   margin-bottom: 0;
 }
